@@ -1,14 +1,14 @@
 Package: ChIPpeakAnno
 Type: Package
 Title: Batch annotation of the peaks identified from either ChIP-seq, ChIP-chip experiments or any experiments resulted in large number of chromosome ranges.
-Version: 2.7.2
-Date: 2013-03-14
+Version: 2.7.3
+Date: 2013-03-20
 Author: Lihua Julie Zhu, Herve Pages, Claude Gazin, Nathan Lawson, Jianhong Ou, Simon Lin, David Lapointe and Michael Green
 Maintainer: Lihua Julie Zhu <julie.zhu@umassmed.edu>
-Depends: R (>= 2.10), grid,VennDiagram, BiocGenerics (>= 0.1.0), biomaRt, multtest, IRanges, Biostrings, BSgenome, BSgenome.Ecoli.NCBI.20080805, GO.db, org.Hs.eg.db, limma
-Imports: gplots, BiocGenerics, biomaRt, multtest, IRanges, Biostrings, BSgenome, GO.db, limma, AnnotationDbi
+Depends: R (>= 2.10), grid,VennDiagram, BiocGenerics (>= 0.1.0), biomaRt, multtest, IRanges, Biostrings, BSgenome, BSgenome.Ecoli.NCBI.20080805, GO.db, org.Hs.eg.db, limma, GenomicFeatures
+Imports: gplots, BiocGenerics, biomaRt, multtest, IRanges, Biostrings, BSgenome, GO.db, limma, AnnotationDbi, GenomicFeatures
 biocViews: Annotation, ChIPseq, ChIPchip
-Suggests: reactome.db
+Suggests: reactome.db, RUnit, BiocGenerics
 Description: The package includes functions to retrieve the sequences around the peak, obtain enriched Gene Ontology (GO) terms, find the nearest gene, exon, miRNA or custom features such as most conserved elements and other transcription factor binding sites supplied by users. Starting 2.0.5, new functions have been added for finding the peaks with bi-directional promoters with summary statistics (peaksNearBDP), for summarizing the occurrence of motifs in peaks (summarizePatternInPeaks) and for adding other IDs to annotated peaks or enrichedGO (addGeneIDs). This package leverages the biomaRt, IRanges, Biostrings, BSgenome, GO.db, multtest and stat packages
 License: GPL (>= 2)
 LazyLoad: yes 
