@@ -9,5 +9,6 @@ import(BSgenome)
 import(GO.db)
 import(grid)
 import(VennDiagram)
+import(GenomicFeatures)
 importMethodsFrom(AnnotationDbi, mget, get)
 export(getAnnotation, annotatePeakInBatch, assignChromosomeRegion, getAllPeakSequence, write2FASTA, getEnrichedGO,getEnrichedPATH, getUniqueGOidCount, hyperGtest,convert2EntrezID, addAncestors, BED2RangedData, GFF2RangedData, makeVennDiagram, findOverlappingPeaks,peaksNearBDP,summarizePatternInPeaks,countPatternInSeqs,translatePattern, addGeneIDs,condenseMatrixByColnames)
